# rite

./: .botbox.json  .botbox.toml  .edict.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  redesign.txt
.agents/: cli-output.md  testing.md  tui-screenshot.md
.agents/botbox/: .version  dev-loop.txt  finish.md  groom.md  last-iteration.txt  mission.md  review-request.md  worker-loop.md
.agents/botbox/design/: .design-docs-version
.agents/edict/: .version  cross-channel.md  finish.md  groom.md  merge-check.md  mission.md  planning.md  preflight.md  review-loop.md  review-request.md  review-response.md  worker-loop.md
.beads/: issues.jsonl
.botbus/: agents.jsonl  claims.jsonl  state.json
.botbus/channels/: _dm_StorageFixer_TestAgent.jsonl  general.jsonl
.claude/: settings.json
.crit/: events.jsonl
.github/workflows/: ci.yml
docs/: dm-design.md
notes/: attachments.md  git-sync.md
scripts/: generate-demo.sh  screenshot-tui.sh  test-hooks.sh  test-separator-debug.sh  test-separator-tmux.sh  test-separator.sh  test-tui-new-channel-simple.sh  test-tui-new-channel.sh  test-watch-integration.sh
src/: lib.rs  main.rs  telemetry.rs
src/attachments/: cache.rs  metadata.rs  mod.rs
src/cli/: agents.rs  agentsmd.rs  channels.rs  claim.rs  doctor.rs  format.rs  history.rs  hooks.rs  inbox.rs  index.rs  init.rs  mark_read.rs  messages.rs  mod.rs  names.rs  register.rs  search.rs  send.rs  status.rs  statuses.rs  subscribe.rs  sync.rs  telegram.rs  tldr.rs  ui.rs  wait.rs  watch.rs  whoami.rs
src/core/: agent.rs  channel.rs  claim.rs  flags.rs  hook.rs  identity.rs  message.rs  mod.rs  names.rs  project.rs  status.rs
src/index/: fts.rs  mod.rs  schema.rs  sync.rs
src/storage/: agent_state.rs  jsonl.rs  mod.rs  state.rs  watch.rs
src/sync/: auto_commit.rs  git.rs  mod.rs
src/telegram/: client.rs  config.rs  mod.rs  service.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: claims.rs  failures.rs  labels.rs  multi_agent.rs  read_tracking.rs  sync.rs  tldr.rs  tui.rs
tests/common/: mod.rs
(+25 files in other folders)
