[package]
name = "botbus"
version = "0.14.0"
edition = "2024"

[[bin]]
name = "bus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
colored = "3.1.1"
ctrlc = "3.4.5"
crossterm = "0.28.1"
directories = "6.0.0"
fs2 = "0.4.3"
globset = "0.4.18"
notify = "8.2.0"
notify-rust = "4.11.3"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tui-textarea = "0.7.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
serial_test = "3"
tempfile = "3.24.0"
